crates/deadline-cli/tests/snapshots/cli_bundle__bundle_submit_invalid_parameter_name_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli_bundle.rs
info:
  program: deadline
  args:
    - bundle
    - submit
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp1Z6Gyl/bad_param_name
    - "--yes"
    - "--parameter"
    - 123Invalid=value
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61414"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61414"
    AWS_ENDPOINT_URL_S3: "http://localhost:61414"
    AWS_ENDPOINT_URL_STS: "http://localhost:61414"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp1Z6Gyl/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp1Z6Gyl
---
success: false
exit_code: 1
----- stdout -----
Parameter names must be alphanumeric Open Job Description identifiers. Invalid parameter name: 123Invalid

----- stderr -----
