crates/deadline-cli/tests/snapshots/cli_bundle__bundle_submit_missing_template_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli_bundle.rs
info:
  program: deadline
  args:
    - bundle
    - submit
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXmZUvk/empty_bundle
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:62906"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:62906"
    AWS_ENDPOINT_URL_S3: "http://localhost:62906"
    AWS_ENDPOINT_URL_STS: "http://localhost:62906"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXmZUvk/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpXmZUvk
---
success: false
exit_code: 1
----- stdout -----
Job bundle directory lacks a template.json or template.yaml:
[TEMP_PATH]

----- stderr -----
